@@ -976,4 +976,29 @@ function postgresql_safe_sql_string($string) {
 function postgresql_get_db_last_error() {
 	return pg_last_error();
 }
+
+/**
+ * This function gets the time from either system or sql based on preference and returns it
+ *
+ * @return int Unix timestamp
+ */
+function postgresql_get_system_time() {
+	global $config;
+	
+	static $time = 0;
+	
+	if ($time != 0)
+		return $time;
+	
+	if ($config["timesource"] = "sql") {
+		$time = get_db_sql ("SELECT ceil(date_part('epoch', CURRENT_TIMESTAMP));");
+		if (empty ($time)) {
+			return time ();
+		}
+		return $time;
+	}
+	else {
+		return time ();
+	}
+}
 ?>
