@@ -26,10 +26,10 @@ function select_db_engine() {
 
 	switch ($config["dbtype"]) {
 		case "mysql":
-			require_once ($config['homedir'] . '/include/db/mysql.php');
+			return mysql_get_system_time();
 			break;
 		case "postgresql":
-			require_once ($config['homedir'] . '/include/db/postgresql.php');
+			return postgresql_get_system_time();
 			break;
 	}
 }
