@@ -34,7 +34,20 @@ $option = array ("prominent" => "timestamp");
 ?>
 <b>Hora actual del sistema:</b> <?php print_timestamp (time (), false, $option); ?>
 <br />
-<b>Hora actual de la base de datos:</b> <?php print_timestamp (get_db_sql ("SELECT UNIX_TIMESTAMP()"), false, $option); ?>
+<b>Hora actual de la base de datos:</b>
+<?php
+global $config;
+
+switch ($config["dbtype"]) {
+	case "mysql":
+		$timestamp = get_db_value_sql("SELECT UNIX_TIMESTAMP();");
+		break;
+	case "postgresql":
+		$timestamp = get_db_value_sql("SELECT ceil(date_part('epoch', CURRENT_TIMESTAMP));");
+		break;
+}
+print_timestamp ($timestamp, false, $option);
+?>
 <br />
 <b>Hora de su navegador:</b> <script type="text/javascript">document.write (date);</script>
 </p>
